# ZPI-evolutionary-planner

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  POSTMAN_TEST.md  README.md  REDIS_TESTING.md  db.sqlite3  requirements.txt  test_example.json
backend/backend/: asgi.py  models.py  settings.py  urls.py
backend/identity/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/optimizer/: admin.py  consumers.py  logger.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/preferences/: PREFS_STRUCTURE.md  admin.py  models.py  urls.py  views.py
backend/scheduling/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
frontend/evoplanner_frontend/: package-lock.json  package.json
optimizer_service/: CMakeLists.txt  README.md
optimizer_service/data/: generated_input.json  input-easy.json  input-medium.json  input.json  output.json
optimizer_service/data/input/: new-input-updated.json
optimizer_service/include/event/: EventReceiver.hpp  EventSender.hpp
optimizer_service/include/model/: EventModels.hpp  Genotype.hpp  Individual.hpp  ProblemData.hpp
optimizer_service/include/optimization/: Evaluator.hpp  ExampleGeneticAlgorithm.hpp  GeneticAlgorithm.hpp  IGeneticAlgorithm.hpp  ZawodevGeneticAlgorithm.hpp
optimizer_service/include/utils/: JsonParser.hpp  Logger.hpp  TestCaseGenerator.hpp
optimizer_service/src/: main.cpp
optimizer_service/src/event/: EventReceiver.cpp  EventSender.cpp
optimizer_service/src/model/: EventModels.cpp  Individual.cpp  ProblemData.cpp
optimizer_service/src/optimization/: Evaluator.cpp  ExampleGeneticAlgorithm.cpp  GeneticAlgorithm.cpp  ZawodevGeneticAlgorithm.cpp
optimizer_service/src/utils/: JsonParser.cpp  Logger.cpp  TestCaseGenerator.cpp
optimizer_service/tests/: test_main.cpp
(+55 files in other folders)
